tests/stacks/ibm/application/oidc-authservice/test_data/expected/~g_v1_service_authservice.yaml
apiVersion: v1
kind: Service
metadata:
<<<<<<< HEAD
  labels:
    app.kubernetes.io/component: oidc-authservice
    app.kubernetes.io/name: oidc-authservice
=======
>>>>>>> upstream/master
  name: authservice
  namespace: istio-system
spec:
  ports:
  - name: http-authservice
    port: 8080
    targetPort: http-api
  publishNotReadyAddresses: true
  selector:
    app: authservice
<<<<<<< HEAD
    app.kubernetes.io/component: oidc-authservice
    app.kubernetes.io/name: oidc-authservice
=======
>>>>>>> upstream/master
  type: ClusterIP
